ai-app/src/snapshots/ai_app__api__tests__create_plan_invalid_too_big_expenses.snap
---
source: ai-app/src/api.rs
expression: "TestResult::Err { draft, error: err.to_string() }"
---
{
  "status": "Err",
  "draft": {
    "sources": [
      {
        "name": "Зарплата",
        "kind": {
          "type": "other",
          "expected": {
            "value": "100000",
            "currency": "RUB"
          }
        }
      }
    ],
    "expenses": [
      {
        "name": "Всё",
        "value": {
          "RATE": {
            "value": "101"
          }
        },
        "category": null
      }
    ]
  },
  "error": "invalid plan: expenses exceed income"
}
