ai-app/src/snapshots/ai_app__api__tests__update_plan_invalid.snap
---
source: ai-app/src/api.rs
expression: "TestResult::Err { draft, error: err.to_string() }"
---
{
  "status": "Err",
  "draft": {
    "sources": [],
    "expenses": []
  },
  "error": "invalid plan: empty plan"
}
